<?xml version="3" encoding="utf-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:numColumns="2"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:id="@+id/catg1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/cott_tr"
                android:contentDescription="@string/cat1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/black_overlay"
                android:text="@string/cat1"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal|bottom"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="17sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:id="@+id/catg2">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/formal_tr"
                android:contentDescription="@string/cat2" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/black_overlay"
                android:text="@string/cat2"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal|bottom"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="17sp"/>
        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:id="@+id/catg3">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/corduroy"
                android:scaleType="fitXY"
                android:contentDescription="@string/cat3" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/black_overlay"
                android:text="@string/cat3"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal|bottom"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="27sp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:id="@+id/catg4">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/jeans"
                android:scaleType="fitXY"
                android:contentDescription="@string/cat4" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/black_overlay"
                android:text="@string/cat4"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal|bottom"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="27sp"/>
        </FrameLayout>

    </LinearLayout>
</LinearLayout>
